[package]
name = "xenvmevent-sys"
version = "0.1.1"
authors = ["Mathieu Tarral <mathieu.tarral@protonmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["xen"]
description = "Rust unsafe bindings for Xen VM event definitions"
license = "GPL-3.0-only"

[dependencies]

[build-dependencies]
bindgen = "0.52.0"
